data/derived/fa15/progs/unify/prog2344.ml.out
Characters 87-100:
  digitsOfInt 0 :: return end
  ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
